Created and built entire page content flow according to box-wire planning.

--- a/carmen-style.html
+++ b/carmen-style.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Style Test</title>
-	<link rel="stylesheet" type="text/css" href="sandiego-style.css">
+	<link rel="stylesheet" type="text/css" href="css/sandiego-style.css">
 </head>
 <body>
 	<span>Span element</span>
