Added a new index.html file and a few images

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Carmen Sandiego</title>
+	<link rel="icon" href="img/carmen-logo.png">
 </head>
 <body>
 	<!-- header element -->
@@ -42,6 +43,7 @@
 		<p>To report Carmen Sandiego's latest whereabouts or related intel, email ACME at agentargen@acme.co.</p>
 		<p>This site belongs to <a href="https://carmensandiego.fandom.com/wiki/A.C.M.E._(2019)">ACME</a>intellect property. &copy; ACME inc. </p>
 	</footer>
+
 
 </body>
 </html>
