Wrote the CSS for the website (and edited a bit of html as well)

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
 	<title>Carmen Sandiego</title>
 	<link rel="icon" href="img/carmen-logo.png">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Alata&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/carmen.css">
 </head>
 <body>
 	<!-- header element -->
@@ -16,7 +19,7 @@
 		<h2>Agent Information</h2>
 		<p>Carmen Sandiego, raised in an island near the Spanish waters by VILE Academy founders, was originally found by Shadow San in Buenos Aires, Argentina. Upon graduation, she has changed sides and decided to only steal from thieves. At least, that is what intel indicates...</p>
 		<img src="img/carmen-exit.gif">
-		<p>Carmen Sandiego escapes again!</p>
+		<p class="caption">Carmen Sandiego escapes again!</p>
 
 		<!-- Partners -->
 		<h2>Carmen's Partners in Crime</h2>
